Small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Coursera Test Site</title>
 </head>
 <body>
-<h1>Hello, young padawan!</h1>
+<h1>Hello, young padawan! Make yourself at home.</h1>
 </body>
 </html>
